--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
   "dependencies": {
     "@angular/common": "^14.0.0",
     "@angular/core": "^14.0.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "^14.0.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@capacitor/camera": "^4.1.3",
     "@ionic/angular": "^6.1.9",
+    "@ionic/pwa-elements": "^3.1.1",
     "ionicons": "^6.0.3",
     "rxjs": "~6.6.0",
+    "swiper": "^8.4.4",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
   },
