--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@angular/service-worker": "^14.0.0",
     "@capacitor/camera": "^4.1.3",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
