--- a/package.json
+++ b/package.json
@@ -15,17 +15,24 @@
   "dependencies": {
     "@angular/common": "^14.0.0",
     "@angular/core": "^14.0.0",
-    "@angular/fire": "^7.4.1",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^14.0.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/pwa": "^0.5.3",
     "@angular/router": "^14.0.0",
     "@angular/service-worker": "^14.0.0",
+    "@awesome-cordova-plugins/in-app-browser": "^6.4.0",
     "@capacitor/camera": "^4.1.3",
+    "@capacitor/splash-screen": "^5.0.6",
+    "@capacitor/status-bar": "^5.0.6",
     "@ionic/angular": "^6.1.9",
     "@ionic/pwa-elements": "^3.1.1",
+    "@ionic/storage-angular": "^4.0.0",
     "angular-calendar": "^0.30.1",
+    "firebase": "^9.15.0",
     "ionicons": "^6.0.3",
+    "qrcode": "^1.5.1",
     "rxjs": "~6.6.0",
     "swiper": "^8.4.4",
     "tslib": "^2.2.0",
