--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/forms": "^14.0.0",
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/pwa": "^0.5.3",
+    "@angular/pwa": "^16.2.1",
     "@angular/router": "^14.0.0",
     "@angular/service-worker": "^14.0.0",
     "@awesome-cordova-plugins/in-app-browser": "^6.4.0",
@@ -30,17 +30,21 @@
     "@ionic/pwa-elements": "^3.1.1",
     "@ionic/storage-angular": "^4.0.0",
     "angular-calendar": "^0.30.1",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "firebase": "^9.15.0",
     "ionicons": "^6.0.3",
     "qrcode": "^1.5.1",
     "rxjs": "~6.6.0",
     "swiper": "^8.4.4",
     "tslib": "^2.2.0",
+    "xlsx": "^0.17.0",
+    "xlsx-style": "^0.8.13",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.0.0",
-    "@angular-eslint/builder": "~13.0.1",
+    "@angular-eslint/builder": "^16.1.2",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
@@ -66,7 +70,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
+    "protractor": "^3.3.0",
     "ts-node": "~8.3.0",
     "typescript": "~4.7.3"
   },
